ui-independent application logic (to share code between GTK and web apps)

--- a/www/index.html
+++ b/www/index.html
@@ -21,15 +21,9 @@ A.comment { color: #600020 }
 
 <h1>Algebras for graphs of bounded treewidth</h1>
 
-<table width="100%" cellpadding="20">
-  <tr valign="top" halign="left">
-    <td id="input"></td>
-    <td>
-    <div id="canvas"></div><br>
-    <div id="log"></div><br>
-    </td>
-  </tr>
-</table>
+<div id="entry"></div><br>
+<div id="canvas"></div><br>
+<div id="log"></div><br>
 
 </body>
 </html>
