small improvements for the web applet

--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="graphs; hypergraphs; treewidth; algebra; presentation; axiomatisation">
 <meta name="description" content="A web applet to play with graphs and their algebraic presentations">
 <script type="text/javascript" src="../_build/default/www/hg.bc.js"></script>
-<!-- <link rel="stylesheet" type="text/css" href="../hip.css"> -->
+<link rel="stylesheet" type="text/css" href="hip.css">
 <style type="text/css">
 <!--
 A.code { color: #800080 }
@@ -33,7 +33,7 @@ A.comment { color: #600020 }
 </p>
 
 <p> Below you can enter a term to see its graph (the syntax is explained at the bottom of this page)</p>
-<div id="entry"></div><br>
+<div id="entry"></div>
 <p> You may move elements using the mouse, or zoom using control-scroll. You may also type commands in the box below to add/remove elements, etc (press 'h' for a list)</p>
 <div id="strokes"></div><br>
 <div id="infos"></div><br>
