makefile + css file

--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
 <meta name="author" content="Amina Doumane, Samuel Humeau, Damien Pous">
 <meta name="keywords" content="graphs; hypergraphs; treewidth; algebra; presentation; axiomatisation">
 <meta name="description" content="A web applet to play with graphs and their algebraic presentations">
-<script type="text/javascript" src="../_build/default/www/hg.bc.js"></script>
+<script type="text/javascript" src="hg.bc.js"></script>
 <link rel="stylesheet" type="text/css" href="hip.css">
 <style type="text/css">
 <!--
@@ -25,7 +25,7 @@ A.comment { color: #600020 }
   This is a web appendix to the following paper, to be presented at ICALP 2024:
 </p>
 <p>
-  <a href="https://hal.science/hal-04560570v1/document">
+  <a href="https://hal.science/hal-04560570/document">
     A finite presentation of graphs of treewidth at most three</a>, by
   <a href="https://perso.ens-lyon.fr/amina.doumane/">Amina Doumane</a>,
   <a href="https://perso.ens-lyon.fr/damien.pous/">Damien Pous</a> and
